--- a/index.html
+++ b/index.html
@@ -127,11 +127,11 @@
             </p>
 
             <a
-              href="https://github.com/your-username/your-repo"
+              href="https://github.com/rohanparvej/QR-gen"
               target="_blank"
               class="github-btn"
             >
-              Visit GitHub →
+              Visit GitHub → 
             </a>
           </div>
         </div>
@@ -156,7 +156,7 @@
       </p>
 
       <a
-        href="https://github.com/your-username/your-repo"
+        href="https://github.com/rohanparvej/QR-gen"
         target="_blank"
         class="footer-github-btn"
       >
